Extend endpoints #23
