# applications/pub-chem-index/backend/pub_chem_index/openapi/openapi.yaml
@@ -18,6 +18,42 @@ paths:
                 type: string
           description: ok
       x-openapi-router-controller: pub_chem_index.controllers.default_controller
+  /molecules/cids/{cids}/tables/{tables}:
+    description: The REST endpoint/path used to get instances from a list of tables
+    get:
+      description: Gets the details of a single instance of a `Molecule`.
+      operationId: search_across_tables
+      parameters:
+      - description: List of cids.
+        explode: false
+        in: path
+        name: cids
+        required: true
+        schema:
+          type: string
+        style: simple
+      - description: List of tables
+        explode: false
+        in: path
+        name: tables
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Molecule'
+                type: array
+          description: Successful response - returns a single `Molecule`.
+      summary: Get a Molecule
+      tags:
+      - molecule
+      x-openapi-router-controller: pub_chem_index.controllers.molecule_controller
+    summary: Path used to manage a single Molecule search by CID.
   /molecules/component:
     description: The REST endpoint/path used to list and create zero or more `Molecule`
       entities.  This path contains a `GET` and `POST` operation to perform the list
@@ -600,6 +636,43 @@ paths:
         explode: false
         in: path
         name: term
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Molecule'
+                type: array
+          description: Successful response - returns a single `Molecule`.
+      summary: Get a Molecule
+      tags:
+      - molecule
+      x-openapi-router-controller: pub_chem_index.controllers.molecule_controller
+    summary: Path used to manage a single Molecule search by CID.
+  /molecules/synonyms/{term}/properties/{tables}:
+    description: The REST endpoint/path used to get single instances of an `Molecule`.  This
+      path contains `GET` operations used to perform the get tasks, respectively.
+    get:
+      description: Gets the details of a single instance of a `Molecule`.
+      operationId: search_synonyms_properties
+      parameters:
+      - description: A unique identifier for a `Molecule`.
+        explode: false
+        in: path
+        name: term
+        required: true
+        schema:
+          type: string
+        style: simple
+      - description: List of tables to search.
+        explode: false
+        in: path
+        name: tables
         required: true
         schema:
           type: string
